<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lol Team</string>
    <string name="action_settings">Settings</string>
    <string name="btn_Main_Team">Team Builder</string>
    <string name="btn_Main_CounterList">Counter List</string>
    <string name="btn_Main_Exit">Exit</string>
    <string name="title_activity_team_builder">Team Builder</string>
    <string name="txt_TB_title">Select Champions!</string>
    <string name="txt_TB_team1">Your team:</string>
    <string name="txt_TB_team2">Enemy team:</string>
    <string name="txt_TB_top">Top</string>
    <string name="txt_TB_jg">Jungle</string>
    <string name="txt_TB_mid">Mid</string>
    <string name="txt_TB_supp">Supp</string>
    <string name="txt_TB_adc">ADC</string>
    <string name="title_activity_select_champ">Select Champion</string>
    <string name="btn_TB_Calc">OK</string>
    <string name="txt_SC_title">Select Champion:</string>
    <string name="hint_SC_SelChamp">Ej: Ahri</string>
    <string name="title_activity_result">Results</string>
    <string name="txt_Result_Winner">WINNER</string>
    <string name="btn_Result_Back">Back</string>
    <string name="txt_Result_TC">Team skills:</string>
    <string name="txt_Result_TC2">Enemy Team skills:</string>
    <string name="txt_Result_TC_Ex">Excellent:</string>
    <string name="txt_Result_TC_Go">Good:</string>
    <string name="txt_Result_TC_Ba">Bad:</string>
    <string name="txt_Result_TC_Stats">Team stats:</string>
    <string name="txt_Result_TC_Stats2">Enemy Team stats:</string>
    <string name="txt_Result_TC_StatsAD">AD:</string>
    <string name="txt_Result_TC_StatsAP">AP:</string>
    <string name="txt_Result_TC_StatsHP">HP:</string>
    <string name="txt_Result_TC_StatsDiff">Difficulty:</string>
    <string name="title_activity_counter_list">Counter List</string>
    <string name="txt_CL_SelChamp">Selected Champion:</string>
    <string name="txt_CL_Use">Use:</string>
    <string name="btn_CL_Back">Back</string>
    <string name="title_activity_player_info">PlayerInfo</string>
    <string name="btn_Main_PlayerInfo">Player Info</string>
    <string name="hint_PI_Summ">Summoner Name</string>
    <string name="btn_PI_SearchSumm">Search Summoner</string>
    

</resources>
