<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PlayerInfo" >

    <EditText
        android:id="@+id/editText_PI_SummonerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_toLeftOf="@+id/spinner_PI_Realm"
        android:hint="@string/hint_PI_Summ" >

        <requestFocus />
    </EditText>

    <Spinner
        android:id="@+id/spinner_PI_Realm"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText_PI_SummonerName"
        android:layout_alignTop="@+id/editText_PI_SummonerName"
        android:layout_alignParentRight="true" />

    <Button
        android:id="@+id/btn_PI_SearchSumm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_PI_SummonerName"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_PI_SearchSumm" />
    
    <ListView
        android:id="@+id/listView_PI_Results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_PI_SearchSumm"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_below="@+id/btn_PI_SearchSumm"
        android:layout_above="@+id/btn_PI_Back" >
    </ListView>

    <Button
        android:id="@+id/btn_PI_Back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_CL_Back" />

</RelativeLayout>
