<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CounterList" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView_CL_SelChamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/txt_CL_SelChamp"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageView_CL_SelChamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:background="@null"
            android:contentDescription="@string/txt_CL_SelChamp"
            android:src="@drawable/none" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView_CL_Use"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/txt_CL_Use"
        android:layout_below="@+id/linearLayout1"
        android:textStyle="bold" />

    <View
        android:id="@+id/lineaDummy"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="2dp"
        android:layout_below="@+id/textView_CL_Use"
        android:background="@android:color/background_dark" />
    
    <ListView
        android:id="@+id/listView_CL_Results"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/btn_CL_Back"
        android:layout_below="@+id/lineaDummy" >
    </ListView>

    <Button
        android:id="@+id/btn_CL_Back"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_CL_Back" />

</RelativeLayout>